--- a/styles.css
+++ b/styles.css
@@ -125,6 +125,12 @@ nav {
   color: #fefefe;
 }
 
+@media screen and (min-width: 768px) {
+  .navbar form {
+    width: auto !important;
+  }
+}
+
 /* hero section */
 #hero {
   width: 100%;
